# serializer version: 1
# name: TestCLIInterface.test_cli_help
  '''
                                                                                  
   [33mUsage:[0m [1mmain[0m [[1;36mOPTIONS[0m] [[1;36mINPUT_FILE[0m]                                             
                                                                                  
   Parse Markdown and turn it into nicely-formatted text for terminal display.    
   If no INPUT_FILE is provided, reads from stdin.                                
   Features:                                                                      
   • 256-color support with different shades for headers                          
   • Syntax highlighting for code blocks                                          
   • Proper word wrapping based on terminal width                                 
   • Support for all standard markdown elements                                   
   • Streaming renderer with backtracking for LLM output                          
   • Character-by-character processing with minimal flickering                    
                                                                                  
   Examples:                                                                      
   md2term README.md                    # Render a markdown file                  
   echo "# Hello" | md2term             # Render from stdin                       
   cat file.md | pv [1;32m-qL[0m 20 | md2term    # Simulate streaming input                
   md2term [1;36m--width[0m 60 README.md         # Set custom width                        
                                                                                  
   The renderer automatically handles both complete files and streaming input,    
   with intelligent backtracking when markdown syntax is incomplete.              
                                                                                  
  [2m╭─[0m[2m Options [0m[2m───────────────────────────────────────────────────────────────────[0m[2m─╮[0m
  [2m│[0m [1;36m--width[0m    [1;32m-w[0m  [1;33mINTEGER[0m  Override terminal width                              [2m│[0m
  [2m│[0m [1;36m--version[0m      [1;33m       [0m  Show the version and exit.                           [2m│[0m
  [2m│[0m [1;36m--help[0m         [1;33m       [0m  Show this message and exit.                          [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  
  '''
# ---
# name: TestCLIInterface.test_cli_version
  '''
  main, version 1.0.2
  
  '''
# ---
# name: TestCLIInterface.test_cli_with_file_input
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                  [0m[1;96mTest Header[0m[1;96m                                   [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  This is a [1mtest[0m paragraph.
  
  '''
# ---
# name: TestCLIInterface.test_cli_with_stdin
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                  [0m[1;96mTest Header[0m[1;96m                                   [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  This is a [1mtest[0m paragraph with [1;31;40mcode[0m.
  
  
  '''
# ---
# name: TestCLIInterface.test_cli_with_width_option
  '''
  [96m────────────────────────────────────────[0m
  [1;96m              [0m[1;96mTest Header[0m[1;96m               [0m
  [96m────────────────────────────────────────[0m
  
  This is a very long paragraph that 
  should wrap differently when the 
  terminal width is changed to a smaller 
  value.
  
  
  '''
# ---
# name: TestEdgeCases.test_cli_nonexistent_file
  '''
                                                                                  
   [33mUsage:[0m [1mmain[0m [[1;36mOPTIONS[0m] [[1;36mINPUT_FILE[0m]                                             
                                                                                  
  [2m [0m[2mTry[0m[2m [0m[2;34m'main --help'[0m[2m [0m[2mfor help[0m[2m                                                    [0m[2m [0m
  [31m╭─[0m[31m Error [0m[31m─────────────────────────────────────────────────────────────────────[0m[31m─╮[0m
  [31m│[0m Invalid value for '[INPUT_FILE]': 'nonexistent.md': No such file or          [31m│[0m
  [31m│[0m directory                                                                    [31m│[0m
  [31m╰──────────────────────────────────────────────────────────────────────────────╯[0m
                                                                                  
  
  '''
# ---
# name: TestEdgeCases.test_code_block_without_language
  '''
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [49mdef hello():[0m                                                                 [2m│[0m
  [2m│[0m [49m    print("Hello, World!")[0m                                                   [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestEdgeCases.test_empty_input
  '''
  
  
  '''
# ---
# name: TestEdgeCases.test_nested_formatting
  '''
  This has [1mbold with [0m[1;3mitalic inside[0m[1m and [0m[1;31;40mcode[0m text.
  
  '''
# ---
# name: TestEdgeCases.test_only_whitespace
  '''
  
  
  '''
# ---
# name: TestEdgeCases.test_very_narrow_width
  '''
  This is a long 
  sentence that should
  wrap multiple times 
  when rendered in a 
  very narrow 
  terminal.
  
  '''
# ---
# name: TestMarkdownFeatures.test_blockquotes
  '''
  [2;34m│[0m [2;3;34mThis is a blockquote with some important information. It can span multiple [0m
  [2;34m│[0m [2;3;34mlines and contain [0m[1;2;3;34m[[0m[2;3;34m1mbold[0m[1;2;3;34m[[0m[2;3;34m0m and [0m[1;2;3;34m[[0m[2;3;34m3mitalic[0m[1;2;3;34m[[0m[2;3;34m0m text.[0m
  [2;34m│[0m
  [2;34m│[0m [2;3;34mIt can even contain [0m[1;2;3;34m[[0m[1;2;3;34m1[0m[2;3;34m;[0m[1;2;3;34m31[0m[2;3;34m;40minline code[0m[1;2;3;34m[[0m[2;3;34m0m and [0m[1;2;3;34m[[0m[1;2;3;34m1[0m[2;3;34m;[0m[1;2;3;34m4[0m[2;3;34m;34mlinks[0m[1;2;3;34m[[0m[2;3;34m0m[0m[1;2;3;34m[[0m[1;2;3;34m2[0m[2;3;34m;34m [0m
  [1;2;3;34m([0m[2;3;4;34mhttps://example.com[0m[2;3;4;34m)[0m[2;3;34m[0m[1;2;3;34m[[0m[2;3;34m0m.[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_cheesecake_recipe
  '''
  [1;95mClassic New York Style Cheesecake[0m
  
  [1;93mIngredients:[0m
  
  [1;33m•[0m [1mCrust:[0m
    [1;33m•[0m 2 cups graham cracker crumbs (about 40 full crackers)
    [1;33m•[0m 1/3 cup granulated sugar
    [1;33m•[0m 1/2 cup unsalted butter, melted
  [1;33m•[0m [1mCheese Filling:[0m
    [1;33m•[0m 4 packages (8 oz each) cream cheese, at room temperature
    [1;33m•[0m 1 cup granulated sugar
    [1;33m•[0m 1 tablespoon vanilla extract
    [1;33m•[0m 4 large eggs
  
  '''
# ---
# name: TestMarkdownFeatures.test_code_blocks_bash
  '''
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [2;49m# Install dependencies[0m                                                       [2m│[0m
  [2m│[0m [49muv[0m[90;49m [0m[49madd[0m[90;49m [0m[49mclick[0m[90;49m [0m[49mrich[0m[90;49m [0m[49mmistune[0m                                                    [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [2;49m# Run the program[0m                                                            [2m│[0m
  [2m│[0m [49mpython[0m[90;49m [0m[49mmd2term.py[0m[90;49m [0m[49mREADME.md[0m                                                  [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [2;49m# Use with pipes[0m                                                             [2m│[0m
  [2m│[0m [49mcurl[0m[90;49m [0m[49m-s[0m[90;49m [0m[49mhttps://raw.githubusercontent.com/user/repo/main/README.md[0m[90;49m [0m[49m|[0m[90;49m [0m[49mpython[0m[90;49m [0m [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_code_blocks_javascript
  '''
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [94;49mfunction[0m[90;49m [0m[49mgreetUser(name)[0m[90;49m [0m[49m{[0m                                                   [2m│[0m
  [2m│[0m [90;49m  [0m[94;49mreturn[0m[90;49m [0m[33;49m`[0m[33;49mHello, [0m[33;49m${[0m[49mname[0m[33;49m}[0m[33;49m! Welcome to our application.[0m[33;49m`[0m[49m;[0m                      [2m│[0m
  [2m│[0m [49m}[0m                                                                            [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [94;49mconst[0m[90;49m [0m[49musers[0m[90;49m [0m[49m=[0m[90;49m [0m[49m[[0m[33;49m"Alice"[0m[49m,[0m[90;49m [0m[33;49m"Bob"[0m[49m,[0m[90;49m [0m[33;49m"Charlie"[0m[49m];[0m                                   [2m│[0m
  [2m│[0m [49musers.forEach((user)[0m[90;49m [0m[49m=>[0m[90;49m [0m[49mconsole.log(greetUser(user)));[0m                       [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_code_blocks_python
  '''
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [94;49mdef[0m[90;49m [0m[92;49mfibonacci[0m[49m(n):[0m                                                            [2m│[0m
  [2m│[0m [90;49m    [0m[33;49m"""Generate Fibonacci sequence up to n terms."""[0m                         [2m│[0m
  [2m│[0m [49m    [0m[94;49mif[0m[49m n <= [0m[94;49m0[0m[49m:[0m                                                               [2m│[0m
  [2m│[0m [49m        [0m[94;49mreturn[0m[49m [][0m                                                            [2m│[0m
  [2m│[0m [49m    [0m[94;49melif[0m[49m n == [0m[94;49m1[0m[49m:[0m                                                             [2m│[0m
  [2m│[0m [49m        [0m[94;49mreturn[0m[49m [[0m[94;49m0[0m[49m][0m                                                           [2m│[0m
  [2m│[0m [49m    [0m[94;49melif[0m[49m n == [0m[94;49m2[0m[49m:[0m                                                             [2m│[0m
  [2m│[0m [49m        [0m[94;49mreturn[0m[49m [[0m[94;49m0[0m[49m, [0m[94;49m1[0m[49m][0m                                                        [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [49m    sequence = [[0m[94;49m0[0m[49m, [0m[94;49m1[0m[49m][0m                                                        [2m│[0m
  [2m│[0m [49m    [0m[94;49mfor[0m[49m i [0m[95;49min[0m[49m [0m[96;49mrange[0m[49m([0m[94;49m2[0m[49m, n):[0m                                                    [2m│[0m
  [2m│[0m [49m        sequence.append(sequence[i-[0m[94;49m1[0m[49m] + sequence[i-[0m[94;49m2[0m[49m])[0m                       [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [49m    [0m[94;49mreturn[0m[49m sequence[0m                                                          [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [2;49m# Example usage[0m                                                              [2m│[0m
  [2m│[0m [96;49mprint[0m[49m(fibonacci([0m[94;49m10[0m[49m))[0m                                                         [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_complete_document
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                [0m[1;96mMain Title (H1)[0m[1;96m                                 [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  This is a paragraph with [1mbold text[0m, [3mitalic text[0m, and [1;31;40minline code[0m. Here's a [1;4;34mlink [0m
  [1;4;34mto example[0m[2;34m (https://example.com)[0m and some more text.
  
  [1;94mSubsection (H2)[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;95mSub-subsection (H3)[0m
  
  [1;93mLevel 4 Header (H4)[0m
  
  [1;92mLevel 5 Header (H5)[0m
  
  [1;97mLevel 6 Header (H6)[0m
  
  [1;94mCode Examples[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  Here's some inline code: [1;31;40mprint("Hello, World!")[0m in the middle of a sentence.
  
  [1;95mPython Code Block[0m
  
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [94;49mdef[0m[90;49m [0m[92;49mfibonacci[0m[49m(n):[0m                                                            [2m│[0m
  [2m│[0m [90;49m    [0m[33;49m"""Generate Fibonacci sequence up to n terms."""[0m                         [2m│[0m
  [2m│[0m [49m    [0m[94;49mif[0m[49m n <= [0m[94;49m0[0m[49m:[0m                                                               [2m│[0m
  [2m│[0m [49m        [0m[94;49mreturn[0m[49m [][0m                                                            [2m│[0m
  [2m│[0m [49m    [0m[94;49melif[0m[49m n == [0m[94;49m1[0m[49m:[0m                                                             [2m│[0m
  [2m│[0m [49m        [0m[94;49mreturn[0m[49m [[0m[94;49m0[0m[49m][0m                                                           [2m│[0m
  [2m│[0m [49m    [0m[94;49melif[0m[49m n == [0m[94;49m2[0m[49m:[0m                                                             [2m│[0m
  [2m│[0m [49m        [0m[94;49mreturn[0m[49m [[0m[94;49m0[0m[49m, [0m[94;49m1[0m[49m][0m                                                        [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [49m    sequence = [[0m[94;49m0[0m[49m, [0m[94;49m1[0m[49m][0m                                                        [2m│[0m
  [2m│[0m [49m    [0m[94;49mfor[0m[49m i [0m[95;49min[0m[49m [0m[96;49mrange[0m[49m([0m[94;49m2[0m[49m, n):[0m                                                    [2m│[0m
  [2m│[0m [49m        sequence.append(sequence[i-[0m[94;49m1[0m[49m] + sequence[i-[0m[94;49m2[0m[49m])[0m                       [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [49m    [0m[94;49mreturn[0m[49m sequence[0m                                                          [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [2;49m# Example usage[0m                                                              [2m│[0m
  [2m│[0m [96;49mprint[0m[49m(fibonacci([0m[94;49m10[0m[49m))[0m                                                         [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  [1;95mJavaScript Code Block[0m
  
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [94;49mfunction[0m[90;49m [0m[49mgreetUser(name)[0m[90;49m [0m[49m{[0m                                                   [2m│[0m
  [2m│[0m [90;49m  [0m[94;49mreturn[0m[90;49m [0m[33;49m`[0m[33;49mHello, [0m[33;49m${[0m[49mname[0m[33;49m}[0m[33;49m! Welcome to our application.[0m[33;49m`[0m[49m;[0m                      [2m│[0m
  [2m│[0m [49m}[0m                                                                            [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [94;49mconst[0m[90;49m [0m[49musers[0m[90;49m [0m[49m=[0m[90;49m [0m[49m[[0m[33;49m"Alice"[0m[49m,[0m[90;49m [0m[33;49m"Bob"[0m[49m,[0m[90;49m [0m[33;49m"Charlie"[0m[49m];[0m                                   [2m│[0m
  [2m│[0m [49musers.forEach((user)[0m[90;49m [0m[49m=>[0m[90;49m [0m[49mconsole.log(greetUser(user)));[0m                       [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  [1;94mLists[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;95mUnordered List[0m
  
  [1;33m•[0m First item
  [1;33m•[0m Second item with [1mbold text[0m
  [1;33m•[0m Third item with [3mitalic text[0m
  [1;33m•[0m Fourth item with [1;31;40minline code[0m
  
  [1;95mOrdered List[0m
  
  [1;36m1.[0m First numbered item
  [1;36m2.[0m Second numbered item
  [1;36m3.[0m Third numbered item with a [1;4;34mlink[0m[2;34m (https://example.com)[0m
  [1;36m4.[0m Fourth numbered item
  
  [1;94mBlockquotes[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [2;34m│[0m [2;3;34mThis is a blockquote with some important information. It can span multiple [0m
  [2;34m│[0m [2;3;34mlines and contain [0m[1;2;3;34m[[0m[2;3;34m1mbold[0m[1;2;3;34m[[0m[2;3;34m0m and [0m[1;2;3;34m[[0m[2;3;34m3mitalic[0m[1;2;3;34m[[0m[2;3;34m0m text.[0m
  [2;34m│[0m
  [2;34m│[0m [2;3;34mIt can even contain [0m[1;2;3;34m[[0m[1;2;3;34m1[0m[2;3;34m;[0m[1;2;3;34m31[0m[2;3;34m;40minline code[0m[1;2;3;34m[[0m[2;3;34m0m and [0m[1;2;3;34m[[0m[1;2;3;34m1[0m[2;3;34m;[0m[1;2;3;34m4[0m[2;3;34m;34mlinks[0m[1;2;3;34m[[0m[2;3;34m0m[0m[1;2;3;34m[[0m[1;2;3;34m2[0m[2;3;34m;34m [0m
  [1;2;3;34m([0m[2;3;4;34mhttps://example.com[0m[2;3;4;34m)[0m[2;3;34m[0m[1;2;3;34m[[0m[2;3;34m0m.[0m
  
  [2;34m│[0m [2;3;34mThis is another blockquote to show multiple quotes.[0m
  
  [1;94mHorizontal Rules[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  Here's some text before a horizontal rule.
  
  [2m────────────────────────────────────────────────────────────────────────────────[0m
  
  And here's some text after the horizontal rule.
  
  [1;94mMixed Content[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  This paragraph contains [1mbold text[0m, [3mitalic text[0m, [1;31;40minline code[0m, and a [1;4;34mlink to [0m
  [1;4;34mdocumentation[0m[2;34m (https://docs.example.com)[0m.
  
  The next paragraph shows how text wraps naturally based on the terminal width, 
  which is especially useful for reading long documents in the terminal like man 
  pages.
  
  [1;95mFinal Code Example[0m
  
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [2;49m# Install dependencies[0m                                                       [2m│[0m
  [2m│[0m [49muv[0m[90;49m [0m[49madd[0m[90;49m [0m[49mclick[0m[90;49m [0m[49mrich[0m[90;49m [0m[49mmistune[0m                                                    [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [2;49m# Run the program[0m                                                            [2m│[0m
  [2m│[0m [49mpython[0m[90;49m [0m[49mmd2term.py[0m[90;49m [0m[49mREADME.md[0m                                                  [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [2;49m# Use with pipes[0m                                                             [2m│[0m
  [2m│[0m [49mcurl[0m[90;49m [0m[49m-s[0m[90;49m [0m[49mhttps://raw.githubusercontent.com/user/repo/main/README.md[0m[90;49m [0m[49m|[0m[90;49m [0m[49mpython[0m[90;49m [0m [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                 [0m[1;96mTest Callouts[0m[1;96m                                  [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;94mGitHub-style callouts[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [34m╭─────────────────────────────╮[0m
  [34m│[0m [1;34m📝  This is a note callout.[0m [34m│[0m
  [34m╰─────────────────────────────╯[0m
  
  [32m╭────────────────────────────╮[0m
  [32m│[0m [1;32m💡  This is a tip callout.[0m [32m│[0m
  [32m╰────────────────────────────╯[0m
  
  [33m╭───────────────────────────────╮[0m
  [33m│[0m [1;33m⚠️  This is a warning callout.[0m [33m│[0m
  [33m╰───────────────────────────────╯[0m
  
  [35m╭───────────────────────────────────╮[0m
  [35m│[0m [1;35m❗  This is an important callout.[0m [35m│[0m
  [35m╰───────────────────────────────────╯[0m
  
  [31m╭────────────────────────────────╮[0m
  [31m│[0m [1;31m🚨  This is a caution callout.[0m [31m│[0m
  [31m╰────────────────────────────────╯[0m
  
  [1;94mCallouts with custom titles[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [34m╭─────────────────────────────────────╮[0m
  [34m│[0m [1;34m📝  Custom Note Title[0m               [34m│[0m
  [34m│[0m                                     [34m│[0m
  [34m│[0m This is a note with a custom title. [34m│[0m
  [34m╰─────────────────────────────────────╯[0m
  
  [32m╭────────────────────────────────────╮[0m
  [32m│[0m [1;32m💡  Pro Tip[0m                        [32m│[0m
  [32m│[0m                                    [32m│[0m
  [32m│[0m This is a tip with a custom title. [32m│[0m
  [32m╰────────────────────────────────────╯[0m
  
  [1;94mCallouts with rich content[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [33m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [33m│[0m [1;33m⚠️  Complex Warning[0m                                                         [33m│[0m
  [33m│[0m                                                                            [33m│[0m
  [33m│[0m This callout contains [1mbold text[0m, [3mitalic text[0m, and              [33m│[0m
  [33m│[0m [1;31;40minline code[0m.                                                   [33m│[0m
  [33m│[0m                                                                            [33m│[0m
  [33m│[0m It can also contain:                                                       [33m│[0m
  [33m│[0m                                                                            [33m│[0m
  [33m│[0m [1;33m•[0m Bullet points [1;33m•[0m Multiple paragraphs [1;33m•[0m Even    [33m│[0m
  [33m│[0m [1;4;34mlinks[0m[2;34m (https://example.com)[0m                            [33m│[0m
  [33m│[0m [2m╭────────────────────────────────────────────────────────────────────── [33m│[0m
  [33m│[0m ────╮[0m [2m│[0m [2;49m# And code blocks![0m                               [33m│[0m
  [33m│[0m [2m│[0m [2m│[0m [94;49mdef[0m[90;49m [0m[92;49mexample[0m[49m():[0m        [33m│[0m
  [33m│[0m [2m│[0m [2m│[0m [49m    [0m[94;49mreturn[0m[49m [0m[33;49m"[0m[33;49mHello [33m│[0m
  [33m│[0m from a callout![0m[33;49m"[0m                                              [33m│[0m
  [33m│[0m [2m│[0m                                                                    [33m│[0m
  [33m│[0m [2m╰────────────────────────────────────────────────────────────────────── [33m│[0m
  [33m│[0m ────╯[0m                                                                   [33m│[0m
  [33m╰────────────────────────────────────────────────────────────────────────────╯[0m
  
  That's all folks!
  
  '''
# ---
# name: TestMarkdownFeatures.test_deeply_nested_lists
  '''
  [1;33m•[0m Level 1 item
    [1;33m•[0m Level 2 item
      [1;33m•[0m Level 3 item
        [1;33m•[0m Level 4 item
      [1;33m•[0m Another level 3 item
    [1;33m•[0m Another level 2 item
  [1;33m•[0m Another level 1 item
    [1;33m•[0m Level 2 under second item
      [1;33m•[0m Level 3 under second item
  
  '''
# ---
# name: TestMarkdownFeatures.test_headings_all_levels
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                [0m[1;96mMain Title (H1)[0m[1;96m                                 [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;94mSubsection (H2)[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;95mSub-subsection (H3)[0m
  
  [1;93mLevel 4 Header (H4)[0m
  
  [1;92mLevel 5 Header (H5)[0m
  
  [1;97mLevel 6 Header (H6)[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_horizontal_rules
  '''
  Here's some text before a horizontal rule.
  
  [2m────────────────────────────────────────────────────────────────────────────────[0m
  
  And here's some text after the horizontal rule.
  
  '''
# ---
# name: TestMarkdownFeatures.test_mixed_content
  '''
  This paragraph contains [1mbold text[0m, [3mitalic text[0m, [1;31;40minline code[0m, and a [1;4;34mlink to [0m
  [1;4;34mdocumentation[0m[2;34m (https://docs.example.com)[0m.
  
  The next paragraph shows how text wraps naturally based on the terminal width, 
  which is especially useful for reading long documents in the terminal like man 
  pages.
  
  '''
# ---
# name: TestMarkdownFeatures.test_mixed_list_types
  '''
  [1;36m1.[0m First ordered item
    [1;33m•[0m Unordered sub-item
    [1;33m•[0m Another unordered sub-item
      [1;36m1.[0m Nested ordered item
      [1;36m2.[0m Another nested ordered item
  [1;36m2.[0m Second ordered item
    [1;33m•[0m Mixed content here
      [1;33m•[0m Deep nesting
        [1;36m1.[0m Very deep ordered item
  
  '''
# ---
# name: TestMarkdownFeatures.test_multiple_blockquotes
  '''
  [2;34m│[0m [2;3;34mThis is a blockquote with some important information.[0m
  
  [2;34m│[0m [2;3;34mThis is another blockquote to show multiple quotes.[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_nested_lists
  '''
  [1;95mClassic New York Style Cheesecake[0m
  
  [1;93mIngredients:[0m
  
  [1;33m•[0m [1mCrust:[0m
    [1;33m•[0m 2 cups graham cracker crumbs (about 40 full crackers)
    [1;33m•[0m 1/3 cup granulated sugar
    [1;33m•[0m 1/2 cup unsalted butter, melted
  [1;33m•[0m [1mCheese Filling:[0m
    [1;33m•[0m 4 packages (8 oz each) cream cheese, at room temperature
    [1;33m•[0m 1 cup granulated sugar
    [1;33m•[0m 1 tablespoon vanilla extract
    [1;33m•[0m 4 large eggs
  
  [1;93mInstructions:[0m
  
  [1;36m1.[0m [1mPrepare the crust:[0m
    [1;36m1.[0m Preheat oven to 350°F (175°C)
    [1;36m2.[0m Mix graham cracker crumbs and sugar
    [1;36m3.[0m Add melted butter and mix well
    [1;36m4.[0m Press into bottom of springform pan
  [1;36m2.[0m [1mMake the filling:[0m
    [1;36m1.[0m Beat cream cheese until smooth
    [1;36m2.[0m Gradually add sugar
    [1;36m3.[0m Add vanilla extract
    [1;36m4.[0m Beat in eggs one at a time
  [1;36m3.[0m [1mBake and cool:[0m
    [1;36m1.[0m Pour filling over crust
    [1;36m2.[0m Bake for 50-60 minutes
    [1;36m3.[0m Cool completely before serving
  
  '''
# ---
# name: TestMarkdownFeatures.test_ordered_lists
  '''
  [1;36m1.[0m First numbered item
  [1;36m2.[0m Second numbered item
  [1;36m3.[0m Third numbered item with a [1;4;34mlink[0m[2;34m (https://example.com)[0m
  [1;36m4.[0m Fourth numbered item
  
  '''
# ---
# name: TestMarkdownFeatures.test_text_formatting
  '''
  This is a paragraph with [1mbold text[0m, [3mitalic text[0m, and [1;31;40minline code[0m. Here's a [1;4;34mlink [0m
  [1;4;34mto example[0m[2;34m (https://example.com)[0m and some more text.
  
  '''
# ---
# name: TestMarkdownFeatures.test_unordered_lists
  '''
  [1;33m•[0m First item
  [1;33m•[0m Second item with [1mbold text[0m
  [1;33m•[0m Third item with [3mitalic text[0m
  [1;33m•[0m Fourth item with [1;31;40minline code[0m
  
  '''
# ---
# name: TestSpecialCharacters.test_special_markdown_characters
  '''
  This has *escaped* asterisks and `escaped` backticks.
  
  '''
# ---
# name: TestSpecialCharacters.test_unicode_characters
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                [0m[1;96mUnicode Test 🚀[0m[1;96m                                 [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  This has émojis 😀 and accénted characters: café, naïve, résumé.
  
  '''
# ---
